# guardian-ddaw3

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  Makefile  README.en.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: container.ts  index.ts  main.ts
apps/api/src/domain/: index.ts
apps/api/test/: application-http.test.ts  create-order.it.test.ts  db.ts  fakes.ts  fixtures.ts  openapi.contract.test.ts  persistence.it.test.ts
apps/web/: .env.example  README.md  global.d.ts  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/e2e/: admin.spec.ts  payment-states.spec.ts  public-payment.spec.ts
apps/web/src/: config.ts
apps/web/test/: api.test.ts  format.test.ts  payment.test.ts  scval.test.ts
apps/worker/: .env.example  README.md  package.json
apps/worker/src/: container.ts  index.ts  logger.ts
contracts/payorder/: Cargo.toml  README.md
contracts/payorder/deployments/: testnet.json
contracts/payorder/src/: lib.rs  test.rs
infra/docker/: .env.local.example  .env.payorder.vps.example  .env.vps.example  README.md  api.Dockerfile  docker-compose.local.yml  docker-compose.payorder.traefik.yml  docker-compose.vps.yml  web.Dockerfile
infra/scripts/: deploy-contract.sh  deploy.sh
infra/traefik/: README.md  payorder_dynamic.toml
openapi/: payorder-api.yaml
(+182 files in other folders)
