[package]
name = "payorder"
version = "0.1.0"
edition = "2021"
description = "PayOrder W3 Guardian — Soroban smart contract (Stellar Testnet)."
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "26"

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
